# waveshare-epd-esp-idf

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
.github/workflows/: esp-component-registry.yml
components/fonts/: CMakeLists.txt  font12.cpp
components/stm32xx_fonts-cn/: CMakeLists.txt  README.md  font12CN.c  font24CN.c  idf_component.yml
components/stm32xx_fonts-en/: CMakeLists.txt  README.md  font12.cpp  font16.cpp  font20.cpp  font24.cpp  font8.cpp  idf_component.yml
components/waveshare/: CMakeLists.txt  DEV_Config.cpp  DEV_Config.h  EPD.h  EPD_1in54.cpp  EPD_1in54.h  EPD_1in54_V2.cpp  EPD_1in54_V2.h  GUI_Paint.h  ImageData.c  ImageData.h  epd1in54-demo.cc  epd1in54_V2-demo.cc  waveshare.c
components/waveshare-epd/: CMakeLists.txt  DEV_Config.c  DEV_Config.cpp  GUI_Paint.c  GUI_Paint.cpp  Kconfig  README.md  idf_component.yml
components/waveshare-epd-13in3k/: CMakeLists.txt  EPD_13in3k.cpp  README.md  idf_component.yml
components/waveshare-epd-13in3k-demo/: CMakeLists.txt  ImageData.c  ImageData.h  LICENSE  README.md  epd13in3k.cc  idf_component.yml
components/waveshare-epd-1in54v2/: CMakeLists.txt  EPD_1in54_V2.cpp  README.md  idf_component.yml
components/waveshare-epd-1in54v2-demo/: CMakeLists.txt  ImageData.c  ImageData.h  README.md  epd1in54_V2-demo.cc  idf_component.yml
components/waveshare/epd1in54/: EPD_1in54.cpp  epd1in54-demo.cc
components/waveshare/epd1in54v2/: EPD_1in54_V2.cpp  epd1in54_V2-demo.cc  epd1in54b_V2-demo.cc
components/waveshare/utility/: Debug.h
main/: CMakeLists.txt  WaveshareMinimal.c  main.c
(+30 files in other folders)
