idf_component_register(SRCS "waveshare.c"

                    #"epd1in54-demo.cc"
                    #"EPD_1in54.cpp"
                    "epd1in54_V2-demo.cc"
                    "EPD_1in54_V2.cpp"
                    "ImageData.c"

                    "DEV_Config.cpp"
                    "GUI_Paint.cpp"

                    REQUIRES driver
                    REQUIRES "stm32xx_fonts-en"
                    INCLUDE_DIRS "include"
                    )


